--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.0.1",
