--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "^0.1.0",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "ng-recaptcha": "^2.1.1",
     "ngx-bootstrap": "^1.7.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
